--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
-<body class="bg-light">
+<body>
 
-<header th:fragment="header-common" class="navbar navbar-expand-md navbar-dark bd-navbar" style="background-color: #e3f2fd;">
+<header th:fragment="header-common" class="navbar navbar-expand-md navbar-dark bd-navbar" style="background-color: #212529;">
     <nav class="container-xxl flex-wrap flex-md-nowrap" aria-label="Main navigation">
         <a class="navbar-brand p-0 me-2" href="/" aria-label="Bootstrap">
             <img src="/assets/brand/logo_sm.png">
