--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -83,7 +83,7 @@
 
         <div sec:authorize="!isAuthenticated()" class="navbar-expand dropdown" >
             <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                <i class="fa fa-bars" aria-hidden="true"></i>
+                <i class="fa fa-user fa-lg" aria-hidden="true" style="color: white"></i>
             </a>
             <ul class="dropdown-menu text-small" data-popper-placement="bottom-end" style="position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 34px);">
                 <li><a class="dropdown-item" href="#" th:href="@{/login}">Sign in</a></li>
