--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -74,7 +74,7 @@
                 <li><a class="dropdown-item" href="#" th:href="@{'/profile/' + ${#authentication.name}}">Profile</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li>
-                    <form class="form-inline my-2 my-lg-0" action="#" th:action="@{/logout}" method="post">
+                    <form class="form-inline my-lg-0" action="#" th:action="@{/logout}" method="post">
                         <button class="dropdown-item" type="submit">Sign out</button>
                     </form>
                 </li>
