--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -8,16 +8,18 @@
 
 <header th:fragment="header-common" class="navbar navbar-expand-md navbar-dark bd-navbar" style="background-color: #212529;">
     <nav class="container-xxl flex-wrap flex-md-nowrap" aria-label="Main navigation">
-        <a class="navbar-brand p-0 me-2" href="/" aria-label="Bootstrap">
-            <img src="/assets/brand/logo_sm.png">
+
+        <a class="navbar-brand p-0 me-lg-2" href="/" aria-label="Mouken">
+            <img src="/assets/brand/logo.png">
         </a>
+
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" class="bi" fill="currentColor" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M2.5 11.5A.5.5 0 0 1 3 11h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 7h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4A.5.5 0 0 1 3 3h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path>
             </svg>
         </button>
 
-        <div class="offcanvas offcanvas-end" id="bdNavbar" style="" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas offcanvas-end" id="bdNavbar" style="background-color: #212529;" aria-labelledby="offcanvasNavbarLabel">
             <!--<div class="navbar-collapse collapse" id="bdNavbar" style="" aria-labelledby="offcanvasNavbarLabel">-->
             <div class="offcanvas-body">
                 <!--<div class="container-fluid">-->
