style: change brand logo image file and size

--- a/src/main/resources/templates/account/send-email-login-link.html
+++ b/src/main/resources/templates/account/send-email-login-link.html
@@ -21,7 +21,7 @@
   </div>
 
   <form class="needs-validation" action="#" th:action="@{/send-email-login-link}" method="post" novalidate>
-    <img class="mb-4" src="/assets/brand/logo_lg.png" alt="" width="60" height="60">
+    <img class="mb-4" src="/assets/brand/logo-dark.png" alt="" width="160" height="160">
     <h1 class="h3 mb-3 fw-normal">Login with no password</h1>
 
     <div class="form-floating">
