--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -10,7 +10,7 @@
     <nav class="container-xxl flex-wrap flex-md-nowrap" aria-label="Main navigation">
 
         <a class="navbar-brand p-0 me-lg-2" href="/" aria-label="Mouken">
-            <img src="/assets/brand/logo.png">
+            <img src="/assets/brand/logo-light.png" width="64" height="64">
         </a>
 
         <button class="navbar-toggler collapsed" type="button" data-bs-toggle="offcanvas" data-bs-target="#bdNavbar" aria-controls="bdNavbar" aria-expanded="false" aria-label="Toggle navigation">
