--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
 <main class="form-signin w-100 m-auto">
   <div class="container">
   <form class="needs-validation" action="#" th:action="@{/login}" method="post" novalidate>
-    <img class="mb-4" src="/assets/brand/logo_lg.png" alt="" width="60" height="60">
+    <img class="mb-4" src="/assets/brand/logo-dark.png" alt="" width="160" height="160">
     <h1 class="h3 mb-3 fw-normal">Sign in</h1>
 
     <div class="form-floating">
