--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -65,10 +65,8 @@
 
 
                     <li sec:authorize="!isAuthenticated()" class="nav-item dropdown">
-                        <button type="button" class="btn btn-link nav-link py-2 px-0 px-lg-2 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static">
-                            <span class="d-lg-none" aria-hidden="true">Bootstrap</span>
-                            <span class="visually-hidden">Bootstrap&nbsp;</span>
-                            <span class="visually-hidden">(switch to other versions)</span>
+                        <button type="button" class="btn btn-link nav-link mt-2 dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false" data-bs-display="static">
+
                         </button>
                         <ul class="dropdown-menu dropdown-menu-end">
                             <li><h6 class="dropdown-header">Account</h6></li>
