--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -16,19 +16,19 @@
             <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
 
             <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInputTop" th:field="*{email}" placeholder="name@example.com" required>
+                <input type="email" class="form-control" id="floatingInputTop" th:field="*{email}" th:errorclass="field-error" placeholder="name@example.com" required>
                 <label for="floatingInputTop">Email address</label>
-                <small class="form-text text-danger" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email Error</small>
+                <small class="field-error form-text text-danger" th:errors="*{email}">Email Error</small>
             </div>
             <div class="form-floating">
-                <input type="text" class="form-control" id="floatingInputMiddle" th:field="*{username}" placeholder="Username" required>
+                <input type="text" class="form-control" id="floatingInputMiddle" th:field="*{username}" th:errorclass="field-error" placeholder="Username" required minlength="3" maxlength="20">
                 <label for="floatingInputMiddle">Username</label>
-                <small class="form-text text-danger" th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Username Error</small>
+                <small class="field-error form-text text-danger" th:errors="*{username}">Username Error</small>
             </div>
             <div class="form-floating">
-                <input type="password" class="form-control" id="floatingInputBottom" th:field="*{password}" placeholder="Password" required minlength="8" maxlength="50">
+                <input type="password" class="form-control" id="floatingInputBottom" th:field="*{password}" th:errorclass="field-error" placeholder="Password" required minlength="8" maxlength="50">
                 <label for="floatingInputBottom">Password</label>
-                <small class="form-text text-danger" th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Password Error</small>
+                <small class="field-error form-text text-danger" th:errors="*{password}">Password Error</small>
             </div>
             <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
     <!--            <small id="submitHelp" class="form-text text-muted">-->
