--- a/src/main/resources/templates/account/sign-up.html
+++ b/src/main/resources/templates/account/sign-up.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
-    <title>Sign up</title>
+    <title th:text="#{title.sign-up}">title.sign-up</title>
     <link rel="stylesheet" th:href="@{/css/sign-up.css}" />
 </head>
 
