--- a/src/main/resources/templates/event/view.html
+++ b/src/main/resources/templates/event/view.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
-    <title>index</title>
+    <title th:text="#{title.event}">title.event</title>
 </head>
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
