--- a/src/main/resources/templates/party/form.html
+++ b/src/main/resources/templates/party/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
-    <title>index</title>
+    <title th:text="#{title.party}">title.party</title>
 </head>
 <body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
