--- a/src/main/resources/templates/account/check-email-login.html
+++ b/src/main/resources/templates/account/check-email-login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
-    <title>index</title>
+    <title th:text="#{title.email-login}">title.email-login</title>
 </head>
 
 <body class="bg-light">
