--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
-    <title>Error</title>
+    <title th:text="#{title.error}">title.error</title>
 </head>
 
 <body>
