--- a/src/main/resources/templates/party/members.html
+++ b/src/main/resources/templates/party/members.html
@@ -2,7 +2,7 @@
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
 <head th:replace="~{fragments/head.html :: head-title(~{::title})}">
-    <title>index</title>
+    <title th:text="#{title.party}">title.party</title>
 </head>
 
 <body class="bg-light">
