fix: fixed footer

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -260,7 +260,7 @@
     </a>
 </ul>
 
-<div th:fragment="party-list (partyList)" class="album py-5 bg-light">
+<div th:fragment="party-list (partyList)" class="album py-5">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col" th:each="party: ${partyList}">
