--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -19,6 +19,24 @@
     <script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/node_modules/jdenticon/dist/jdenticon.min.js"></script>
 
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        main{
+            flex:1;
+        }
+        footer{
+            background-color: #212529;
+            color: white;
+            padding:30px 0;
+        }
+    </style>
 </head>
 
 <head th:fragment="head-title-links (title, links)">
@@ -42,4 +60,22 @@
 
     <!-- links -->
     <th:block th:replace="${links}" />
+    <style>
+        html,
+        body {
+            height: 100%;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        main{
+            flex:1;
+        }
+        footer{
+            padding:30px 0;
+            background: #2c3034;
+            color: #0d6efd;
+        }
+    </style>
 </head>
