--- a/src/main/resources/templates/party/events.html
+++ b/src/main/resources/templates/party/events.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
+<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
     <title th:text="#{title.party}">title.party</title>
+    <link rel="stylesheet" th:href="@{/css/basic.css}" />
 </head>
 
 <body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 <div th:replace="fragments.html :: party-banner"></div>
-
-<div class="container">
+<main class="container">
     <div th:replace="fragments.html :: party-info"></div>
     <div th:replace="fragments.html :: party-menu(partyMenu='event')"></div>
 
@@ -84,8 +84,7 @@
             </div>
         </div>
     </div>
-</div>
-
+</main>
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: tooltip}"></script>
 <script th:replace="~{fragments/script.html :: date-time}"></script>
