--- a/src/main/resources/templates/party/settings/tags.html
+++ b/src/main/resources/templates/party/settings/tags.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head.html :: head-title(~{::title})}">
+<head th:replace="~{fragments/head.html :: head-title-links(~{::title}, ~{::link})}">
     <title th:text="#{title.party.settings}">title.party.settings</title>
+    <link rel="stylesheet" th:href="@{/css/basic.css}" />
 </head>
 <body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
