--- a/src/main/resources/templates/settings/password.html
+++ b/src/main/resources/templates/settings/password.html
@@ -8,7 +8,8 @@
 <body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
-<div class="container">
+<main>
+    <div class="container">
     <div class="row mt-5 justify-content-center">
         <div class="col-2">
             <!-- menu -->
@@ -64,7 +65,7 @@
         </div>
     </div>
 </div>
-
+</main>
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: form-validation}"></script>
 </body>
