--- a/src/main/resources/templates/settings/profile.html
+++ b/src/main/resources/templates/settings/profile.html
@@ -9,112 +9,113 @@
 <body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
-<div class="container">
-    <div class="row mt-5 justify-content-center">
-        <div class="col-2">
-            <!-- menu -->
-            <div th:replace="fragments.html :: settings-menu(currentMenu='profile')"></div>
-        </div>
-
-        <div class="col-8"><!-- introduce -->
-            <!-- alert -->
-            <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
-                <span th:text="${message}">message</span>
+<main>
+    <div class="container">
+        <div class="row mt-5 justify-content-center">
+            <div class="col-2">
+                <!-- menu -->
+                <div th:replace="fragments.html :: settings-menu(currentMenu='profile')"></div>
             </div>
 
-            <div class="row">
-                <!-- title -->
-                <h2 class="col-sm-12" th:text="${account.username}">username</h2>
-            </div>
+            <div class="col-8"><!-- introduce -->
+                <!-- alert -->
+                <div th:if="${message}" class="alert alert-info alert-dismissible fade show mt-3" role="alert">
+                    <span th:text="${message}">message</span>
+                </div>
 
-            <div class="row mt-3 justify-content-center"><!-- update form and profile image -->
-                <form class="col-sm-6"
-                      action="#" th:action="@{/settings/profile}"
-                      th:object="${profile}" method="post" novalidate><!-- update form -->
-                    <!-- update form -->
-                    <div class="form-group row mt-2">
-                        <label for="bio">bio</label>
-                        <input id="bio" type="text" th:field="*{bio}" class="form-control"
-                               placeholder="I love potato." aria-describedby="bioHelp" required>
-                        <!--<small id="bioHelp" class="form-text text-muted">
-                            You can write up to 35 letters.
-                        </small>-->
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">
-                            Please enter more short.
-                        </small>
-                    </div>
-                    <div class="form-group row mt-2">
-                        <label for="url">URL</label>
-                        <input id="url" type="url" th:field="*{url}" class="form-control"
-                               placeholder="http://github.com/steve" aria-describedby="urlHelp" required>
-                        <!--<small id="urlHelp" class="form-text text-muted">
-                            GitHub, Instagram, YouTube...
-                        </small>-->
-                        <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
-                            Please enter URL.
-                        </small>
-                    </div>
-                    <div class="form-group row mt-2">
-                        <label for="company">Jobs</label>
-                        <input id="company" type="text" th:field="*{occupation}" class="form-control"
-                               placeholder="Programmer" aria-describedby="occupationHelp" required>
-                        <!--<small id="occupationHelp" class="form-text text-muted">
-                        </small>-->
-                    </div>
-                    <div class="form-group row mt-2">
-                        <label for="location">Location</label>
-                        <input id="location" type="text" th:field="*{location}" class="form-control"
-                               placeholder="Redmond, WA, USA"
-                               aria-describedby="locationdHelp" required>
-                        <!--<small id="locationdHelp" class="form-text text-muted">
-                            London, NewYork, Tokyo, Seoul
-                        </small>-->
-                    </div>
-                    <div class="form-group row mt-2">
-                        <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
-                    </div>
-                    <div class="form-group row mt-2">
-                        <button class="btn btn-primary btn-block" type="submit"
-                                aria-describedby="submitHelp">Update</button>
-                    </div>
-                </form>
+                <div class="row">
+                    <!-- title -->
+                    <h2 class="col-sm-12" th:text="${account.username}">username</h2>
+                </div>
 
-                <div class="col-sm-6">
-                    <!-- profile image -->
-                    <div class="card text-center">
-                        <div class="card-header">
-                            Profile Image
+                <div class="row mt-3 justify-content-center"><!-- update form and profile image -->
+                    <form class="col-sm-6"
+                          action="#" th:action="@{/settings/profile}"
+                          th:object="${profile}" method="post" novalidate><!-- update form -->
+                        <!-- update form -->
+                        <div class="form-group row mt-2">
+                            <label for="bio">bio</label>
+                            <input id="bio" type="text" th:field="*{bio}" class="form-control"
+                                   placeholder="I love potato." aria-describedby="bioHelp" required>
+                            <!--<small id="bioHelp" class="form-text text-muted">
+                                You can write up to 35 letters.
+                            </small>-->
+                            <small class="form-text text-danger" th:if="${#fields.hasErrors('bio')}" th:errors="*{bio}">
+                                Please enter more short.
+                            </small>
                         </div>
-                        <div id="current-profile-image" class="mt-3">
-                            <svg th:if="${#strings.isEmpty(profile.profileImage)}"
-                                 class="rounded"
-                                  th:data-jdenticon-value="${account.username}" width="125" height="125"></svg>
-                            <img th:if="${!#strings.isEmpty(profile.profileImage)}"
-                                 class="rounded"
-                                 th:src="${profile.profileImage}"
-                                 width="125" height="125" alt="name" th:alt="${account.username}"/>
+                        <div class="form-group row mt-2">
+                            <label for="url">URL</label>
+                            <input id="url" type="url" th:field="*{url}" class="form-control"
+                                   placeholder="http://github.com/steve" aria-describedby="urlHelp" required>
+                            <!--<small id="urlHelp" class="form-text text-muted">
+                                GitHub, Instagram, YouTube...
+                            </small>-->
+                            <small class="form-text text-danger" th:if="${#fields.hasErrors('url')}" th:errors="*{url}">
+                                Please enter URL.
+                            </small>
                         </div>
-                        <div id="new-profile-image" class="mt-3"></div>
-                        <div class="card-body">
-                            <div class="custom-file">
-                                <input type="file" class="custom-file-input" id="profile-image-file">
-                                <label class="custom-file-label" for="profile-image-file">Update</label>
+                        <div class="form-group row mt-2">
+                            <label for="company">Jobs</label>
+                            <input id="company" type="text" th:field="*{occupation}" class="form-control"
+                                   placeholder="Programmer" aria-describedby="occupationHelp" required>
+                            <!--<small id="occupationHelp" class="form-text text-muted">
+                            </small>-->
+                        </div>
+                        <div class="form-group row mt-2">
+                            <label for="location">Location</label>
+                            <input id="location" type="text" th:field="*{location}" class="form-control"
+                                   placeholder="Redmond, WA, USA"
+                                   aria-describedby="locationdHelp" required>
+                            <!--<small id="locationdHelp" class="form-text text-muted">
+                                London, NewYork, Tokyo, Seoul
+                            </small>-->
+                        </div>
+                        <div class="form-group row mt-2">
+                            <input id="profileImage" type="hidden" th:field="*{profileImage}" class="form-control" />
+                        </div>
+                        <div class="form-group row mt-2">
+                            <button class="btn btn-primary btn-block" type="submit"
+                                    aria-describedby="submitHelp">Update</button>
+                        </div>
+                    </form>
+
+                    <div class="col-sm-6">
+                        <!-- profile image -->
+                        <div class="card text-center">
+                            <div class="card-header">
+                                Profile Image
                             </div>
-                            <div id="new-profile-image-control" class="mt-3">
-                                <button class="btn btn-outline-primary btn-block" id="cut-button">Edit</button>
-                                <button class="btn btn-outline-success btn-block" id="confirm-button">Confirm</button>
-                                <button class="btn btn-outline-warning btn-block" id="reset-button">Cancel</button>
+                            <div id="current-profile-image" class="mt-3">
+                                <svg th:if="${#strings.isEmpty(profile.profileImage)}"
+                                     class="rounded"
+                                      th:data-jdenticon-value="${account.username}" width="125" height="125"></svg>
+                                <img th:if="${!#strings.isEmpty(profile.profileImage)}"
+                                     class="rounded"
+                                     th:src="${profile.profileImage}"
+                                     width="125" height="125" alt="name" th:alt="${account.username}"/>
                             </div>
-                            <div id="cropped-new-profile-image" class="mt-3"></div>
+                            <div id="new-profile-image" class="mt-3"></div>
+                            <div class="card-body">
+                                <div class="custom-file">
+                                    <input type="file" class="custom-file-input" id="profile-image-file">
+                                    <label class="custom-file-label" for="profile-image-file">Update</label>
+                                </div>
+                                <div id="new-profile-image-control" class="mt-3">
+                                    <button class="btn btn-outline-primary btn-block" id="cut-button">Edit</button>
+                                    <button class="btn btn-outline-success btn-block" id="confirm-button">Confirm</button>
+                                    <button class="btn btn-outline-warning btn-block" id="reset-button">Cancel</button>
+                                </div>
+                                <div id="cropped-new-profile-image" class="mt-3"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
 
-        </div><!-- introduce end -->
+            </div><!-- introduce end -->
+        </div>
     </div>
-</div>
-
+</main>
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 
 <link  href="/node_modules/cropper/dist/cropper.min.css" rel="stylesheet">
