--- a/src/main/resources/templates/settings/zones.html
+++ b/src/main/resources/templates/settings/zones.html
@@ -8,33 +8,34 @@
 <body class="bg-light">
 <header th:replace="~{fragments/header.html :: header-common}"></header>
 
-<div class="container">
-    <div class="row mt-5 justify-content-center">
-        <div class="col-2"><!-- menu -->
-            <div th:replace="fragments.html :: settings-menu(currentMenu='zones')"></div>
-        </div>
-
-        <div class="col-8">
-            <div class="row">
-                <!-- title -->
-                <h2 class="col-12">Zones</h2>
+<main>
+    <div class="container">
+        <div class="row mt-5 justify-content-center">
+            <div class="col-2"><!-- menu -->
+                <div th:replace="fragments.html :: settings-menu(currentMenu='zones')"></div>
             </div>
-            <div class="row">
-                <div class="col-12">
-                    <!-- description -->
-                    <div class="alert alert-info" role="alert">
-                        You can add a zone with comma or enter key
+
+            <div class="col-8">
+                <div class="row">
+                    <!-- title -->
+                    <h2 class="col-12">Zones</h2>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <!-- description -->
+                        <div class="alert alert-info" role="alert">
+                            You can add a zone with comma or enter key
+                        </div>
+                        <!-- function -->
+                        <div id="whitelist" th:text="${whitelist}" hidden></div>
+                        <input id="zones" type="text" name="zones" th:value="${#strings.listJoin(zones, ',')}"
+                               class="tagify-outside" aria-describedby="tagHelp"/>
                     </div>
-                    <!-- function -->
-                    <div id="whitelist" th:text="${whitelist}" hidden></div>
-                    <input id="zones" type="text" name="zones" th:value="${#strings.listJoin(zones, ',')}"
-                           class="tagify-outside" aria-describedby="tagHelp"/>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
+</main>
 <footer th:replace="~{fragments/footer.html :: footer-common}"></footer>
 <script th:replace="~{fragments/script.html :: ajax-csrf-header}"></script>
 <script th:replace="~{fragments/script.html :: update-zones(baseUrl='/settings/zones')}"></script>
