Revert "style: main page phrase"
This reverts commit 31854a80c36a37de6d9d00fcc292585e45d10c9d.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Mouken</h1>
-                <p class="lead text-muted">Make friends of your pet.</p>
+                <p class="lead text-muted">Look for a team you want.</p>
                 <p>
                     <a href="#" th:href="@{/sign-up}" class="btn btn-primary my-2" >Create account</a>
                     <a href="#" th:href="@{/login}" class="btn btn-secondary my-2">Sign in</a>
